--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&family=Open+Sans:wght@400;700&family=Poppins:ital,wght@0,200;0,300;0,500;0,600;0,700;0,800;1,200&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <title>Kigali Conference</title>
+    <title>Rwanda Conference</title>
 </head>
 <body>
     <header class="header">
