--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                  <img src="img/logo.PNG" alt="logo">
                </a>
 
-               <ul class="nav-wrapper .class-hide">
+               <ul class="nav-wrapper class-hide">
                  <li class="home"> <a href="index.html">Home</a></li>
                  <li class="about"> <a href="about.html">About</a></li>
                  <li class=""> <a href="#">Program</a></li>
