Update image bkg for main

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                </a>
 
                <ul class="nav-wrapper class-hide">
+                <li id="about"> <a href="about.html">About</a></li>
                  <li class="home"> <a href="index.html">Home</a></li>
-                 <li class="about"> <a href="about.html">About</a></li>
                  <li class=""> <a href="#">Program</a></li>
                  <li class=""> <a href="#">Sponsor</a></li>
                  <li class=""> <a href="#">News</a></li>
