--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="about.css">
     <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -80,10 +80,6 @@
       <div class="tech-explain"><p>Africa Tech Summit, the leading African tech event 
         in Kigali and London connecting African tech corporates, investors & startups in Africa.</p></div>
 
-        <div address="address-place">
-            <h2 class="address">2023.01.04(WEB)~06(FRI)</h2>
-            <p class="place"><span>@</span> VIRGINA Hotels & KIGALI</p>
-        </div>
     </section>
 
 
