--- a/about.html
+++ b/about.html
@@ -75,103 +75,19 @@
 
     <section class="main-class">
       <a class="hamburger" href="#"> <img src="img/hb.PNG" alt="" ></a>
-      <p class="title-red"> ANNUAL  COMMON SUMMIT 2023</p>
+  
       <h1 class="headingred">IMPACT OF TECHNOLOGY <br>IN AFRICA</h1>
-      <div class="tech-explain"><p>Africa Tech Summit, the leading African tech event 
-        in Kigali and London connecting African tech corporates, investors & startups in Africa.</p></div>
+      <div class="tech-explain"><p>Hosted by IST-Africa Partner Countries since 2006, the annual IST-Africa Conference showcases international cooperation and African Information Society, 
+        ICT and Innovation Adoption, Policy and Research Capacity Developments and Success Stories.</p></div>
 
-    </section>
-
-
-    <section class="program" id="program">
-      <h2 class="program-title">Main Program</h2>
-      <div class="underline"></div>
-
-      <div class="program-wrapper">
-          <div class="program-card">
-            <img src="img/1p.PNG" alt="" class="program-img">
-            <h4 class="program-lesson">Intoduction </h4>
-            <p class="program-resume">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quia ut, eveniet possimus nam facilis quae dolores aut eum inventore nemo minus assumenda!
-            </p>
-          </div>
-
-          <div class="program-card">
-            <img src="img/2p.PNG" alt="" class="program-img">
-            <h4 class="program-lesson">Cryptography</h4>
-            <p class="program-resume">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quia ut, eveniet possimus nam facilis quae dolores aut eum inventore nemo minus assumenda!
-            </p>
-          </div>
-
-          <div class="program-card">
-            <img src="img/3p.PNG" alt="" class="program-img">
-            <h4 class="program-lesson">Smart Contracts</h4>
-            <p class="program-resume">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quia ut, eveniet possimus nam facilis quae dolores aut eum inventore nemo minus assumenda!
-            </p>
-          </div>
-
-          <div class="program-card">
-            <img src="img/4p.PNG" alt="" class="program-img">
-            <h4 class="program-lesson">Blockchain Development</h4>
-            <p class="program-resume">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quia ut, eveniet possimus nam facilis quae dolores aut eum inventore nemo minus assumenda!
-            </p>
-          </div>
-
-          <div class="program-card">
-            <img src="img/5p.PNG" alt="" class="program-img">
-            <h4 class="program-lesson">Web 3.0</h4>
-            <p class="program-resume">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci quia ut, eveniet possimus nam facilis quae dolores aut eum inventore nemo minus assumenda!
-            </p>
-          </div>
-      </div>
-      <button class="join-program"> Join Our conference 2023</button>
-      <a href="#" class="see-whole  class-hide">SEE THE WHOLE PROGRAM</a>
+        <p class="info-conf"> Please contact us for any further questions about our Conference in 2023</p>
+        <a id="info" href="#">ccglobalSummit@sumit.com</a>
     </section>
 
 
 
 
-    <section class="lecture-list">
-        <div class="lecture-list-one">
-              <h3 class="lecture-text">Speaker</h3>
-              <div class="underline"></div>
-        </div>
-        <div class="lecture-display">
-           <!-- DYNAMIC WITH JS -->
-        </div>
-        
-        <div class="display-boutton">
-            <button id="plus" class="show-more"> More  <svg width="52" height="52" viewBox="0 0 24 24" style="fill: red;">
-             <path d="M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z" />
-           </svg>
-            </button>
-            <button id="withdraw" class="show-more hide-lecture" >LESS<svg width="52" height="52" viewBox="0 0 24 24" fill="red">
-             <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
-           </svg>
-         </button>
-          </div>
-    </section>
-
-
-    <section class="parteners-main class-hide ">
-      <div class="parterner-title">
-         <h3 class="partener-name">Partner</h3>
-         <div class="underline"></div>
-      </div>
-
-      <div class="parteners-info">
-      <img src="img/google.PNG" alt="google-logo">
-      <img src="img/ibm.PNG" alt="ibm-logo">
-      <img src="img/yahoo.PNG" alt="yahoo-logo">
-      <img src="img/micros.PNG" alt="micros-logo">
-      <img src="img/lunix.PNG" alt="linux-logo">
-      
-      </div>
-    </section>
+  
 
     <footer class="footer">
         <div class="footer-left">
