--- a/about.html
+++ b/about.html
@@ -62,7 +62,7 @@
 
                <ul class="nav-wrapper class-hide">
                 <li class="home"> <a href="index.html">Home</a></li>
-                <li id="about"> <a href="about.html">About</a></li>
+                <li class="about"> <a href="about.html">About</a></li>
                  <li class=""> <a href="#">Program</a></li>
                  <li class=""> <a href="#">Sponsor</a></li>
                  <li class=""> <a href="#">News</a></li>
@@ -84,12 +84,33 @@
         <a id="info" href="#">ccglobalSummit@sumit.com</a>
     </section>
 
+     <section class="about-logo">
+      <h2 class="logo-topic"> Africa Tech Conference Summit 2023</h2>
+      <div class="underline"></div>
+      <p class="description">Through the logo contest, which was held from June 8th to July 7th, the winning design was determined through online platforms and social media . The logo of CC Global Summit 2015, which was optimized for use on the homepage and 
+        promotional materials after consultation with the winning designer, is as follows</p>
+           <div class="logo-box">
+             <img src="img/logo.PNG" alt="" srcset="">
+           </div>
+     </section>
+
+    <section class="old-training">
+      <h2 class="old-title">See the Past  Events in Africa</h2>
+      <div class="underline"></div>
+      <p>Take a look at the two Events which took place in Nairobi and KIGALI</p>
+      <div class="trainingimg">
+          <a href="#" class="image">
+              <img src="img/nairobi1.PNG" alt="">
+          </a>
+          <a href="#" class="image">
+              <img src="img/rwanda1.PNG" alt="">
+          </a>
+      </div>
+  </section
 
 
 
-  
-
-    <footer class="footer">
+     <footer class="footer">
         <div class="footer-left">
           <p>&copy;Convention</p>
           <p>Conference</p>
