--- a/about.html
+++ b/about.html
@@ -107,10 +107,13 @@
           </a>
       </div>
   </section
+ 
+    <div></div>
 
 
 
-     <footer class="footer">
+
+      <footer class="footer">
         <div class="footer-left">
           <p>&copy;Convention</p>
           <p>Conference</p>
@@ -120,7 +123,7 @@
           <p>2023 Convention Conference </p>
           <p>All rights reserved</p>
         </div>
-    </footer>
+      </footer>
 
 
       <script src="script.js"></script>
