--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="header">
-      <div class="header-menu class-hide">
+      <div class="header-menu">
         <ul class="header-menu-wrap">
            <li class="header-menu-item">
                <a href="#" class="facebook">
@@ -49,11 +49,8 @@
         </ul>
       </div>
       
-      <div class="menu-bg class-hide">
-        <button class="close">
-            <svg width="45" height="45" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" fill="white" fill-opacity="0.01"/><path d="M24 44C35.0457 44 44 35.0457 44 24C44 12.9543 35.0457 4 24 4C12.9543 4 4 12.9543 4 24C4 35.0457 12.9543 44 24 44Z" fill="none" stroke="#333" stroke-width="1" stroke-linejoin="round"/><path d="M29.6569 18.3431L18.3432 29.6568" stroke="#333" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/><path d="M18.3432 18.3431L29.6569 29.6568" stroke="#333" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        </button>
-
+      <div class="menu-bg">
+        
         <div class="head-nav">
            <nav class="nav-link">
                <a class="logo" href="index.html">
@@ -67,13 +64,16 @@
                  <li class=""> <a href="#">Sponsor</a></li>
                  <li class=""> <a href="#">News</a></li>
                </ul>
-                <a href="#" class="register">Register</a>
+                <a href="#" class="register registerhide">Register</a>
            </nav>
         </div>
       </div>
     </header>
 
     <section class="main-class">
+      <button class="close">
+        <svg width="45" height="45" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" fill="white" fill-opacity="0.01"/><path d="M24 44C35.0457 44 44 35.0457 44 24C44 12.9543 35.0457 4 24 4C12.9543 4 4 12.9543 4 24C4 35.0457 12.9543 44 24 44Z" fill="none" stroke="#333" stroke-width="1" stroke-linejoin="round"/><path d="M29.6569 18.3431L18.3432 29.6568" stroke="#333" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/><path d="M18.3432 18.3431L29.6569 29.6568" stroke="#333" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/></svg>
+    </button>
       <a class="hamburger" href="#"> <img src="img/hb.PNG" alt="" ></a>
       <p class="title-red"> ANNUAL  COMMON SUMMIT 2023</p>
       <h1 class="headingred">IMPACT OF TECHNOLOGY <br>IN AFRICA</h1>
