--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link href="http://fonts.cdnfonts.com/css/cocogoose" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -50,16 +49,18 @@
     </div>
     
     <div class="menu-bg class-hide">
-      <button class="close">
+      <!-- <button class="close">
           <svg width="45" height="45" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" fill="white" fill-opacity="0.01"/><path d="M24 44C35.0457 44 44 35.0457 44 24C44 12.9543 35.0457 4 24 4C12.9543 4 4 12.9543 4 24C4 35.0457 12.9543 44 24 44Z" fill="none" stroke="#333" stroke-width="1" stroke-linejoin="round"/><path d="M29.6569 18.3431L18.3432 29.6568" stroke="#333" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/><path d="M18.3432 18.3431L29.6569 29.6568" stroke="#333" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/></svg>
-      </button>
+      </button> -->
 
       <div class="head-nav">
-         <nav class="nav-link">
+         
+          <div class="logo">
              <a class="logo" href="index.html">
                <img src="img/logo.PNG" alt="logo">
-             </a>
-
+             </a></div>
+             <nav class="nav-link">
+              <div class="nav-wrapper">
              <ul class="nav-wrapper class-hide">
               <li class="home"> <a href="index.html">Home</a></li>
               <li class="about"> <a href="about.html">About</a></li>
@@ -67,17 +68,34 @@
                <li class=""> <a href="#">Sponsor</a></li>
                <li class=""> <a href="#">News</a></li>
              </ul>
-              <a href="#" class="register">Register</a>
+            </div>
          </nav>
+          <!-- mobile version -->
+
+         <button class="register">Register</button>
       </div>
     </div>
   </header>
 
     <section class="main-class">
-      <button class="close">
-        <svg width="45" height="45" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" fill="white" fill-opacity="0.01"/><path d="M24 44C35.0457 44 44 35.0457 44 24C44 12.9543 35.0457 4 24 4C12.9543 4 4 12.9543 4 24C4 35.0457 12.9543 44 24 44Z" fill="none" stroke="#333" stroke-width="1" stroke-linejoin="round"/><path d="M29.6569 18.3431L18.3432 29.6568" stroke="#333" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/><path d="M18.3432 18.3431L29.6569 29.6568" stroke="#333" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"/></svg>
-    </button>
       <a class="hamburger" href="#"> <img src="img/hb.PNG" alt="" ></a>
+    <nav class="nav-mobile">
+      <button class="closebtn">
+          X
+      </button>
+       <div class="wrapper">
+         <ul class="wrapper">
+          <li class="home"> <a href="index.html">Home</a></li>
+          <li class="about"> <a href="about.html">About</a></li>
+           <li class=""> <a href="#">Program</a></li>
+           <li class=""> <a href="#">Sponsor</a></li>
+           <li class=""> <a href="#">News</a></li>
+         </ul>
+       </div>
+    </nav>
+
+
+
       <p class="title-red"> ANNUAL  COMMON SUMMIT 2023</p>
       <h1 class="headingred">IMPACT OF TECHNOLOGY <br>IN AFRICA</h1>
       <div class="tech-explain"><p>Africa Tech Summit, the leading African tech event 
